Bug 359895 - Labels are misaligned in the Redirect Message dialog
Summary: Labels are misaligned in the Redirect Message dialog
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-28 18:51 UTC by Alexander Potashev
Modified: 2016-02-29 05:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments
screenshot (34.81 KB, image/png)
2016-02-28 18:51 UTC, Alexander Potashev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2016-02-28 18:51:00 UTC
In the Redirect Message dialog, the labels Resend-To:, Resend-Cc: and Resend-Bcc: are misaligned vertically with the text edit fields.

Reproducible: Always




KDEPIM 15.12.2.
Comment 1 Alexander Potashev 2016-02-28 18:51:42 UTC
Created attachment 97595 [details]
screenshot
Comment 2 Laurent Montel 2016-02-29 05:57:23 UTC
Git commit ab5debc292e3b8f1d2c740b0ee1d3e0f78712371 by Montel Laurent.
Committed on 29/02/2016 at 05:56.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 359895 - Labels are misaligned in the Redirect Message dialog

FIXED-IN: 5.1.3

M  +0    -1    mailcommon/src/widgets/redirectwidget.cpp

http://commits.kde.org/kdepim/ab5debc292e3b8f1d2c740b0ee1d3e0f78712371
Comment 3 Laurent Montel 2016-02-29 05:57:59 UTC
Git commit d44de3368f7fd931c20265b1c0cceb657d6c1815 by Montel Laurent.
Committed on 29/02/2016 at 05:57.
Pushed by mlaurent into branch 'master'.

Backport fix Bug 359895 - Labels are misaligned in the Redirect Message dialog

M  +0    -1    src/widgets/redirectwidget.cpp

http://commits.kde.org/mailcommon/d44de3368f7fd931c20265b1c0cceb657d6c1815