Fix Bug 359895 - Labels are misaligned in the Redirect Message dialog

FIXED-IN: 5.1.3
BUG: 359895